--- a/source/css/partials/_320.sass
+++ b/source/css/partials/_320.sass
@@ -10,6 +10,8 @@ $giallo: #FDFAE6
 $light_blue: #CCF1F2
 img
   vertical-align: middle
+  max-width: 100%
+  height: auto
 .hidden
   display: none
 .page
