--- a/source/partials/_master-and-muse.haml
+++ b/source/partials/_master-and-muse.haml
@@ -1,4 +1,4 @@
 %h2.title
   %a{href: "http://masterandmuse.com/designer/flavia-la-rocca/"}
     .color-box
-      = image_tag "flr_website-mastermuse-17.png"
+      = image_tag "flr_website_master-17.png"
