--- a/source/press.html.haml
+++ b/source/press.html.haml
@@ -9,7 +9,102 @@
           %span
             PRESS COVERAGE
       .list
+        %div
+          %a{href: "http://movingforward.style.it/2014/04/29/flavia-la-rocca-fw-2014-15/#?refresh_ce", target: "_blank"}
+            .overlay
+            = image_tag "press/lowres/style_it_cover.jpg", :"data-src" => "../img/press/small/style_it_cover.jpg" , :width => "134", :height => "171"
+        %div
+          %a{href: "http://www.vogue.it/en/talents/news/2014/04/flavia-la-rocca-per-master-and-muse-amber-valletta", target: "_blank"}
+            .overlay
+            = image_tag "press/lowres/vogue_it_cover.jpg", :"data-src" => "../img/press/small/vogue_it_cover.jpg" , :width => "134", :height => "171"
+        %div
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/vogueaccessorimarzo2014.jpg", title: "Vogue Accessory - March 2014"}
+            .overlay
+            = image_tag "press/lowres/vogueaccessory_cover-01.jpg", :"data-src" => "../img/press/small/vogueaccessory_cover-01.jpg" , :width => "134", :height => "171"
+        %div
+          %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/metrouk_27marzo_1.jpg", title: "Metro UK - March 2014"}
+            .overlay
+            = image_tag "press/lowres/metro_cover.jpg", :"data-src" => "../img/press/small/metro_cover.jpg" , :width => "134", :height => "171"
+          .hidden
+            %a.fancybox{"data-fancybox-group" => "gallery", href: "../img/press/large/metrouk_27marzo_2.jpg", title: "Metro UK - March 2014"}
 
+        %div
+          %a{href: "http://www.elle.it/Moda/Shopping/SUPER-Pitti-Immagine-terza-edizione-autunno-inverno-2014-15#5", target: "_blank"}
+            .overlay
+            = image_tag "press/lowres/elle_it_cover.jpg", :"data-src" => "../img/press/small/elle_it_cover.jpg" , :width => "134", :height => "171"
+        %div
+          %a{href: "http://www.huffingtonpost.co.uk/veronica-crespi/london-fashion-week-sustainable-talent_b_4832780.html", target: "_blank"}
+            .overlay
+            = image_tag "press/lowres/huff_cover-01.jpg", :"data-src" => "../img/press/small/huff_cover-01.jpg" , :width => "134", :height => "171"
+        %div
+          %a{href: "http://styleswitch.net/2014/02/20/lfw-emerging-designers-and-their-ethical-values-showcased-at-esthetica/", target: "_blank"}
+            .overlay
+            = image_tag "press/lowres/x", :"data-src" => "../img/press/small/x" , :width => "134", :height => "171"
+        %div
+          %a{href: "http://www.ansa.it/lifestyle/notizie/moda/tendenze/2014/02/18/Flavia-Rocca-abiti-eco-passerella-London-Fashion-Week_10100331.html", target: "_blank"}
+            .overlay
+            = image_tag "press/lowres/x", :"data-src" => "../img/press/small/x" , :width => "134", :height => "171"
+        %div
+          %a{href: "http://www.ansa.it/lifestyle/notizie/moda/tendenze/2014/02/18/Flavia-Rocca-abiti-eco-passerella-London-Fashion-Week_10100331.html", target: "_blank"}
+            .overlay
+            = image_tag "press/lowres/ansa_cover-01.jpg", :"data-src" => "../img/press/small/ansa_cover-01.jpg" , :width => "134", :height => "171"
+        %div
+          %a{href: "http://www.glamour.com/fashion/blogs/dressed/2014/02/the-best-of-london-fashion-wee.html", target: "_blank"}
+            .overlay
+            = image_tag "press/lowres/glamour_cover-01.jpg", :"data-src" => "../img/press/small/glamour_cover-01.jpg" , :width => "134", :height => "171"
+        %div
+          %a{href: "http://www.stylebubble.co.uk/style_bubble/2014/03/junky-styling.html", target: "_blank"}
+            .overlay
+            = image_tag "press/lowres/stylecom_cover-01.jpg", :"data-src" => "../img/press/small/stylecom_cover-01.jpg" , :width => "134", :height => "171"
+        %div
+          %a{href: "http://www.vogue.it/en/talents/contests-and-more/2014/02/flavia-la-rocca-for-wowcracy", target: "_blank"}
+            .overlay
+            = image_tag "press/lowres/vogue_it_cover.jpg", :"data-src" => "../img/press/small/vogue_it_cover.jpg" , :width => "134", :height => "171"
+        %div
+          %a{href: "http://www.stylebubble.co.uk/style_bubble/2014/03/fold-and-unfold.html", target: "_blank"}
+            .overlay
+            = image_tag "press/lowres/stylecom_cover-01.jpg", :"data-src" => "../img/press/small/stylecom_cover-01.jpg" , :width => "134", :height => "171"
+        %div
+          %a{href: "http://www.youmagblog.com/2014/03/stylish-eco-friendly-and-sustainable.html", target: "_blank"}
+            .overlay
+            = image_tag "press/lowres/youmag_cover-01.jpg", :"data-src" => "../img/press/small/youmag_cover-01.jpg" , :width => "134", :height => "171"
+        %div
+          %a{href: "http://www.youmagblog.com/2014/03/stylish-eco-friendly-and-sustainable.html", target: "_blank"}
+            .overlay
+            = image_tag "press/lowres/youmag_cover-01.jpg", :"data-src" => "../img/press/small/youmag_cover-01.jpg" , :width => "134", :height => "171"
+        %div
+          %a{href: "http://www.voltcafe.com/blog/padam-padam", target: "_blank"}
+            .overlay
+            = image_tag "press/lowres/volt_cover.jpg", :"data-src" => "../img/press/small/volt_cover.jpg" , :width => "134", :height => "171"
+        %div
+          %a{href: "http://www.style.com/stylefile/tag/flavia-la-rocca/", target: "_blank"}
+            .overlay
+            = image_tag "press/lowres/stylecom_cover-01.jpg", :"data-src" => "../img/press/small/stylecom_cover-01.jpg" , :width => "134", :height => "171"
+        %div
+          %a{href: "http://www.grazia.it/moda/tendenze-moda/altaroma-arthur-arbesser-diane-pernet-autunno-inverno-2014", target: "_blank"}
+            .overlay
+            = image_tag "press/lowres/graziait_cover-01.jpg", :"data-src" => "../img/press/small/graziait_cover-01.jpg " , :width => "134", :height => "171"
+        %div
+          %a{href: "http://www.mffashion.com/it/archivio/2014/01/28/events", target: "_blank"}
+            .overlay
+            = image_tag "press/lowres/mffashion_cover.jpg", :"data-src" => "../img/press/small/mffashion_cover.jpg" , :width => "134", :height => "171"
+
+        %div
+          %a{href: "http://www.all-theprettybirds.com/altaroma-a-weekend-of-high-fashion-in-rome/", target: "_blank"}
+            .overlay
+            = image_tag "press/lowres/birds_cover-01.jpg", :"data-src" => "../img/press/small/birds_cover-01.jpg" , :width => "134", :height => "171"
+        %div
+          %a{href: "http://thehouseofperoni.com/home/fashion-and-photography/2014-01-20/interview-flavia-la-rocca/image-gallery", target: "_blank"}
+            .overlay
+            = image_tag "press/lowres/peroni_cover-01.jpg", :"data-src" => "../img/press/small/peroni_cover-01.jpg" , :width => "134", :height => "171"
+        %div
+          %a{href: "http://www.dmoda.it/2014/01/14/flavia-la-rocca-ss14-la-fusione-tra-creativita-ed-ecosostenibilita/", target: "_blank"}
+            .overlay
+            = image_tag "press/lowres/dmoda_cover-01.jpg", :"data-src" => "../img/press/small/dmoda_cover-01.jpg" , :width => "134", :height => "171"
+        %div
+          %a{href: "http://www.vogue.it/en/talents/news/2013/12/christmas-gifts-by-talents#ad-image318113", target: "_blank"}
+            .overlay
+            = image_tag "press/lowres/vogue_it_cover.jpg", :"data-src" => "../img/press/small/vogue_it_cover.jpg" , :width => "134", :height => "171"
         %div
           %a{href: "http://www.amica.it/2013/12/03/flavialarocca-costruzioni-di-moda/", target: "_blank"}
             .overlay
