--- a/source/press.html.haml
+++ b/source/press.html.haml
@@ -39,11 +39,11 @@
         %div
           %a{href: "http://styleswitch.net/2014/02/20/lfw-emerging-designers-and-their-ethical-values-showcased-at-esthetica/", target: "_blank"}
             .overlay
-            = image_tag "press/lowres/x", :"data-src" => "../img/press/small/x" , :width => "134", :height => "171"
+            = image_tag "press/lowres/switch_cover-01.jpg", :"data-src" => "../img/press/small/switch_cover-01.jpg" , :width => "134", :height => "171"
         %div
-          %a{href: "http://www.ansa.it/lifestyle/notizie/moda/tendenze/2014/02/18/Flavia-Rocca-abiti-eco-passerella-London-Fashion-Week_10100331.html", target: "_blank"}
+          %a{href: "http://it.fashionmag.com/news/London-Fashion-Week-anche-un-italiana-partecipa-a-Estethica-,387414.html#.U3HcW62Syki", target: "_blank"}
             .overlay
-            = image_tag "press/lowres/x", :"data-src" => "../img/press/small/x" , :width => "134", :height => "171"
+            = image_tag "press/lowres/fm_cover.jpg", :"data-src" => "../img/press/small/fm_cover.jpg" , :width => "134", :height => "171"
         %div
           %a{href: "http://www.ansa.it/lifestyle/notizie/moda/tendenze/2014/02/18/Flavia-Rocca-abiti-eco-passerella-London-Fashion-Week_10100331.html", target: "_blank"}
             .overlay
