--- a/source/css/partials/_320.sass
+++ b/source/css/partials/_320.sass
@@ -295,7 +295,7 @@ a.button
     +float-left
 
 //VIDEO MODULE
-#video-container
+.video-container
   margin-top: 20px
   background-color: #E4DEC8
   padding-top: 50px
