--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,12 +1,13 @@
 .page
   = partial "partials/header"
+  = partial "partials/video-miami"
   = partial "partials/banner-ss14"
   = partial "partials/master-and-muse"
   = partial "partials/banner-wowcracy"
   //= partial "partials/banner"
   //= partial "partials/collection-gallery"
   = partial "partials/share"
-  #video-container
+  .video-container
     .color-box
       %h2.concept
         THE CONCEPT
